--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2024"
 [dependencies]
 askama = "0.15.1"
 axum = {version = "0.8.8", features = ["macros"]}
+dotenvy = "0.15.7"
 httpc-test = "0.1.10"
 serde = "1.0.228"
 serde_json = "1.0.149"
+sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "macros"] }
 tokio = { version = "1.49.0", features = ["full"] }
 tower-http = { version = "0.6.8", features = ["fs"] }
